--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,7 @@
 		<link rel="stylesheet" href="/css/main.css">
 		
 		<link rel="stylesheet" href="/css/bootstrap.min.css">
+		<link rel="stylesheet" href="/css/font-awesome.min.css">
 		
 		<script src="js/vendor/modernizr-2.6.2.min.js"></script>
 	</head>
