Begin to generate the web site.

--- a/connectedafrica/templates/index.html
+++ b/connectedafrica/templates/index.html
@@ -1,2 +1,14 @@
+{% extends "layout.html" %}
 
-hello, world! 
+{% block title %}
+  Welcome
+{% endblock %}
+
+{% block content %}
+  Hello, World!
+
+{% endblock %}
+
+{% block js %}{% endblock %}
+
+
