Weird corporate footer.

--- a/connectedafrica/templates/index.html
+++ b/connectedafrica/templates/index.html
@@ -5,8 +5,9 @@
 {% endblock %}
 
 {% block content %}
-  Hello, World!
-
+  Our vision is to develop an online resource portal that can act as
+  a primary reference point for those interested in combating corruption
+  and promoting democratic governance in Africa.
 {% endblock %}
 
 {% block js %}{% endblock %}
