--- a/connectedafrica/static/style/style.less
+++ b/connectedafrica/static/style/style.less
@@ -1,7 +1,7 @@
 
 // Variables
 
-@footer-background: #666;
+@footer-background: #333;
 @footer-foreground: #ddd;
 
 
@@ -40,7 +40,7 @@
 @import "../vendor/bootstrap/less/jumbotron.less";
 // @import "../vendor/bootstrap/less/thumbnails.less";
 @import "../vendor/bootstrap/less/alerts.less";
-@import "../vendor/bootstrap/less/progress-bars.less";
+// @import "../vendor/bootstrap/less/progress-bars.less";
 @import "../vendor/bootstrap/less/media.less";
 @import "../vendor/bootstrap/less/list-group.less";
 @import "../vendor/bootstrap/less/panels.less";
@@ -48,10 +48,10 @@
 @import "../vendor/bootstrap/less/close.less";
 
 // Components w/ JavaScript
-@import "../vendor/bootstrap/less/modals.less";
-@import "../vendor/bootstrap/less/tooltip.less";
-@import "../vendor/bootstrap/less/popovers.less";
-@import "../vendor/bootstrap/less/carousel.less";
+// @import "../vendor/bootstrap/less/modals.less";
+// @import "../vendor/bootstrap/less/tooltip.less";
+// @import "../vendor/bootstrap/less/popovers.less";
+// @import "../vendor/bootstrap/less/carousel.less";
 
 // Utility classes
 @import "../vendor/bootstrap/less/utilities.less";
@@ -67,8 +67,53 @@
 // Base layout 
 
 body {
-    font-family: 'Open Sans', sans-serif;
-    font-size: 1.4em;
-    color: #666;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1.4em;
+  background-color: @footer-background;
+}
+
+
+// Footer style
+
+#pagewrapper {
+  background-color: white;
+  padding-bottom: 2em;
+}
+
+footer {
+  @footer-fg-dark: lighten(@footer-background, 30%);
+
+  padding: 2em 0 2em 0;
+  color: @footer-foreground;
+
+  a, a:hover, a:visited {
+    color: @footer-foreground;
+    text-decoration: underline;
+  }
+
+  hr {
+    border-top: 1px solid  lighten(@footer-background, 10%);
+  }
+
+  p {
+    font-size: 0.9em;
+    color: @footer-fg-dark;
+
+    a, a:hover, a:visited {
+      color: @footer-fg-dark;
+    }
+  }
+
+  .partners {
+    text-align: right;
+
+    a, a:hover {
+      text-decoration: none;
+    }
+
+    img {
+      margin-left: 1em;
+    }
+  }
 }
 
