--- a/connectedafrica/templates/layout.html
+++ b/connectedafrica/templates/layout.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>{% block title %}(Untitled){% endblock %} // {{APP_NAME}}</title>
+    <title>{% block title %}(Untitled){% endblock %} - {{APP_NAME}}</title>
     <meta name="description" content="{% block description %}{% endblock %}">
     <meta name="keywords" content="{% block keywords %}{% endblock %}">
     <meta name="author" content="Institute for Security Studies, Code for Africa, ANCIR">
@@ -37,6 +37,7 @@
         <div class="row">
           <div class="col-md-3">
             <ul>
+              <li><a href="{{url_for('base.page', path='about')}}">About {{APP_NAME}}</a></li>
               <li><a href="https://github.com/CodeForAfrica/connectedAFRIKA">Source code</a></li>
               <li>Powered by <a href="http://grano.pudo.org/">grano</a></li>
             </ul>
