--- a/connectedafrica/templates/pages.html
+++ b/connectedafrica/templates/pages.html
@@ -4,7 +4,7 @@
 {% block description %}{{page['description']}}{% endblock %}
 
 {% block content %}
-  {{page.body}}
+  {{page.html | safe}}
 {% endblock %}
 
 
