Refactor scrapers a bit, and split JSE loader and scraper into separate modules.

--- a/connectedafrica/templates/layout.html
+++ b/connectedafrica/templates/layout.html
@@ -24,7 +24,7 @@
     <div id="pagewrapper">
       <nav class="navbar navbar-default navbar-static-top" role="navigation">
         <div class="container">
-          <a class="navbar-brand">{{APP_NAME}}</a>
+          <a class="navbar-brand" href="/">{{APP_NAME}}</a>
         </div>
       </nav>
       <div class="container">
