A bit of tuning on the browser.

--- a/connectedafrica/templates/browser.html
+++ b/connectedafrica/templates/browser.html
@@ -36,6 +36,7 @@
       </table>
     </div>
     <div class="col-md-3">
+      <h4>Types of brass</h4>
       <ul>
         {% for schema, count in schema_facet.results %}
           <li>
