--- a/connectedafrica/templates/organization_profile.html
+++ b/connectedafrica/templates/organization_profile.html
@@ -54,18 +54,16 @@
 
   <div class="col-md-4">
     <div id="bio" class="panel panel-default panel-body">
-    	{% if person.properties.image_url %}
-    		<img src="{{ person.properties.image_url.value }}" alt="{{ display_name }}">
+    	{% if organization.properties.image_url %}
+    		<img src="{{ organization.properties.image_url.value }}" alt="{{ display_name }}">
     	{% else %}
-    		<img src="{{ url_for('static', filename='images/person_profile.png') }}" alt="generic profile image">
+    		<img src="{{ url_for('static', filename='images/organization_profile.png') }}" alt="generic profile image">
     	{% endif %}
       <p>
         TODO
       </p>
       <p>
         <strong>Types: </strong>Person, Elected Representative, Political Candidate <a href="#" class="sources" data-toggle="popover" title="Sources" data-content="<a href='http://source.example.com'>http://source.example.com</a>">[1]</a><br/>
-        <strong>Born: </strong>12 April 1942 <a href="#" class="sources" data-toggle="popover" title="Sources" data-content="<a href='http://source.example.com'>http://source.example.com</a>">[1]</a><br/>
-        <strong>Full name: </strong>Jacob Gedleyihlekisa Zuma <a href="#" class="sources" data-toggle="popover" title="Sources" data-content="<a href='http://source.example.com'>http://source.example.com</a>">[1]</a></br>
       </p>
       <div id="related-entities" class="text-center">
       	TODO
