Link browser from footer.

--- a/connectedafrica/templates/layout.html
+++ b/connectedafrica/templates/layout.html
@@ -38,8 +38,13 @@
           <div class="col-md-3">
             <ul>
               <li><a href="{{url_for('base.page', path='about')}}">About {{APP_NAME}}</a></li>
+              <li><a href="{{url_for('browser.view')}}">Search</a></li>
+            </ul>
+          </div>
+          <div class="col-md-3">
+            <ul>
               <li><a href="https://github.com/CodeForAfrica/connectedAFRICA">Source code</a></li>
-              <li>Powered by <a href="http://grano.pudo.org/">grano</a></li>
+              <li>Powered by <a href="http://granoproject.org/">grano</a></li>
             </ul>
           </div>
         </div>
