template snippet to render an entity property with its source citation

--- a/connectedafrica/templates/profile_base.html
+++ b/connectedafrica/templates/profile_base.html
@@ -11,7 +11,7 @@
     {% block displayname %}{{ display_name }}{% endblock %}
   </h1>
   <p class="subtitle">
-    {% block subtitle %}{% endblock %}
+    {% block subtitle %}{% with key="tagline", render_source=1 %}{% include "p.html" %}{% endwith %}{% endblock %}
   </p>
 </div>
 
