A bit of layout and home page copy.

--- a/connectedafrica/static/style/style.less
+++ b/connectedafrica/static/style/style.less
@@ -147,3 +147,16 @@ footer {
 // Modifications of bootstrap defaults
 
 ul.pagination { margin: 0; }
+
+
+// Home page specifics
+.data-summary {
+  width: 100%;
+
+  td.number {
+    width: 30%;
+    text-align: right;
+    padding-right: 1em;
+  }
+}
+
