--- a/connectedafrica/templates/index.html
+++ b/connectedafrica/templates/index.html
@@ -5,9 +5,43 @@
 {% endblock %}
 
 {% block content %}
-  Our vision is to develop an online resource portal that can act as
-  a primary reference point for those interested in combating corruption
-  and promoting democratic governance in Africa.
+  <div class="jumbotron">
+    <h1>{{APP_NAME}}</h1>
+    <p>
+      We explore the links between politics, power and money through
+      systems of connectivity informing and influencing the political
+      economy.
+    </p>
+  </div>
+  <div class="row">
+    <div class="col-md-8">
+      <h3>All the President's Men</h3>
+      <p>
+        <strong>July 9, 2014</strong>
+        Link and announcement for president's piece goes here. This is a
+        short teaser that tells readers what we've done and what a key
+        finding is. <a href='#'>Read more...</a>
+      </p>
+      <h3>What is {{APP_NAME}}?</h3>
+      <p>
+        Our database is a resource for anyone interested in how relationships -
+        biographical, professional or economic - influence the peopel and process
+        if South African politcs.
+        <a href='#'>Read more...</a>
+      </p>
+    </div>
+    <div class="col-md-4">
+      <h3>Data summary</h3>
+      <table class="data-summary">
+        {% for schema, count in schemata.results %}
+          <tr>
+            <td class="number"><strong>{{count}}</strong></td>
+            <td><a href='{{url_for('browser.view', schema=schema.get('name'))}}'>{{schema.meta.plural_upper or schema.label}}</a></td>
+          </tr>
+        {% endfor %}
+      </table>
+    </div>
+  </div>
 {% endblock %}
 
 {% block js %}{% endblock %}
