--- a/connectedafrica/templates/layout.html
+++ b/connectedafrica/templates/layout.html
@@ -25,6 +25,18 @@
       <nav class="navbar navbar-default navbar-static-top" role="navigation">
         <div class="container">
           <a class="navbar-brand" href="/">{{APP_NAME}}</a>
+          <ul class="nav navbar-nav">
+            <li><a href="{{url_for('base.page', path='stories')}}">Stories</a></li>
+            <li><a href="{{url_for('browser.view')}}">Explore</a></li>
+            <li><a href="{{url_for('base.page', path='about')}}">About</a></li>
+            <li><a href="{{url_for('base.page', path='contact')}}">Contact</a></li>
+          </ul>
+          <form class="navbar-form navbar-right" role="search"
+                action="{{url_for('browser.view')}}">
+            <div class="form-group">
+              <input type="text" name="q" class="form-control" placeholder="Search">
+            </div>
+          </form>
         </div>
       </nav>
       <div class="container">
