Two stub pages.

--- a/connectedafrica/static/style/style.less
+++ b/connectedafrica/static/style/style.less
@@ -142,6 +142,11 @@ footer {
       margin-left: 1em;
     }
   }
+
+  ul {
+    list-style-type: none;
+    padding: 0;
+  }
 }
 
 // Modifications of bootstrap defaults
