--- a/connectedafrica/static/style/style.less
+++ b/connectedafrica/static/style/style.less
@@ -149,9 +149,40 @@ footer {
   }
 }
 
+
 // Modifications of bootstrap defaults
 
 ul.pagination { margin: 0; }
+
+// Browser 
+
+.main-search {
+  width: 100%;
+}
+
+.form-search {
+  .form-group {
+    margin: 1em 0 1em 0;
+    padding-left: 0;
+    padding-right: 0;
+
+    input.main-search {
+      font-size: 1.2em;
+      padding: 12px 24px 12px 24px;
+      height: auto;
+    }
+  }
+}
+
+// Facets 
+
+.facets {
+  li.active {
+    a {
+      color: white;
+    }
+  }
+}
 
 
 // Home page specifics
