--- a/connectedafrica/templates/browser.html
+++ b/connectedafrica/templates/browser.html
@@ -8,15 +8,19 @@
 {% block content %}
   <div class="row">
     <div class="col-xs-12">
-      <form class="form-horizontal" role="form">
+      <h3>Search
+        {% if query %}
+          for '{{ query }}'
+        {% else %}
+          {{APP_NAME}}
+        {% endif %}
+      </h3>
+      <form class="form-search" role="form">
         <div class="form-group col-xs-12">
-          <input type="text" class="form-control" name="q"
+          <input type="text" class="form-control main-search" name="q"
             value="{{query}}"
             placeholder="Search for people, companies and institutions...">
         </div>
-        <!--div class="form-group col-xs-2">
-          <button type="submit" class="btn btn-default">Search</button>
-        </div-->
       </form>
     </div>
   </div>
@@ -35,16 +39,20 @@
         {% endfor %}
       </table>
     </div>
-    <div class="col-md-3">
-      <h4>Types of brass</h4>
-      <ul>
+    <div class="col-md-3 facets">
+      <ul class="list-group">
         {% for schema, count in schema_facet.results %}
-          <li>
+          <li class="list-group-item {{'active' if schema.name in schema_facet.active else ''}}">
             {% if schema.name in schema_facet.active %}
-              <a href="{{query_remove('schema', schema.name)}}">{{schema.label}}</a> ({{count}})
+              <a class="facet-active" href="{{query_remove('schema', schema.name)}}">
+                {{schema.meta.plural_upper or schema.label}}
+              </a>
             {% else %}
-              <a href="{{query_add('schema', schema.name)}}">{{schema.label}}</a> ({{count}})
+              <a href="{{query_add('schema', schema.name)}}">
+                {{schema.meta.plural_upper or schema.label}}
+              </a>
             {% endif %}
+            <span class="count badge">{{count}}</span>
           </li>
         {% endfor %}
       </ul>
