--- a/connectedafrica/templates/layout.html
+++ b/connectedafrica/templates/layout.html
@@ -34,7 +34,8 @@
           <form class="navbar-form navbar-right" role="search"
                 action="{{url_for('browser.view')}}">
             <div class="form-group">
-              <input type="text" name="q" class="form-control" placeholder="Search">
+              <input type="text" name="q" class="form-control"
+                value="{{query}}" placeholder="Search">
             </div>
           </form>
         </div>
