Minor style things.

--- a/connectedafrica/templates/browser.html
+++ b/connectedafrica/templates/browser.html
@@ -1,9 +1,7 @@
 {% extends "layout.html" %}
 {% from 'paginator.html' import paginate %}
 
-{% block title %}
-  Explore
-{% endblock %}
+{% block title %}Explore{% endblock %}
 
 {% block content %}
   <div class="row">
