--- a/connectedafrica/static/style/style.less
+++ b/connectedafrica/static/style/style.less
@@ -88,6 +88,11 @@ body {
   background-color: @footer-background;
 }
 
+h1, h2, h3, h4 {
+  font-weight: 800;
+  text-transform: uppercase;
+}
+
 // Header style
 
 .navbar.navbar-default {
