--- a/connectedafrica/templates/layout.html
+++ b/connectedafrica/templates/layout.html
@@ -12,6 +12,7 @@
 
     <meta name="og:site_name" content="{{APP_NAME}}">
 
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,800,300' rel='stylesheet' type='text/css'>
     {% assets filters="less,cssmin,cssrewrite", output="style.css",
         "style/style.less"
     %}
@@ -51,13 +52,15 @@
           <div class="col-md-3">
             <ul>
               <li><a href="{{url_for('base.page', path='about')}}">About {{APP_NAME}}</a></li>
-              <li><a href="{{url_for('browser.view')}}">Search</a></li>
+              <li><a href="{{url_for('base.page', path='faq')}}">Frequently Asked Questions</a></li>
+              <li><a href="{{url_for('base.page', path='contact')}}">Contact us</a></li>
             </ul>
           </div>
           <div class="col-md-3">
             <ul>
               <li><a href="https://github.com/CodeForAfrica/connectedAFRICA">Source code</a></li>
               <li>Powered by <a href="http://granoproject.org/">grano</a></li>
+              <li><a href="http://backend.connectedafrica.org">Backend login</a></li>
             </ul>
           </div>
         </div>
