--- a/connectedafrica/templates/layout.html
+++ b/connectedafrica/templates/layout.html
@@ -23,8 +23,8 @@
   </head>
   <body>
     <div id="pagewrapper">
-      <nav class="navbar navbar-default navbar-static-top" role="navigation">
-        <div class="container">
+      <div class="container">
+        <nav class="navbar navbar-default navbar-static-top" role="navigation">
           <a class="navbar-brand" href="/">{{APP_NAME}}</a>
           <ul class="nav navbar-nav">
             <li><a href="{{url_for('base.page', path='stories')}}">Stories</a></li>
@@ -39,9 +39,7 @@
                 value="{{query}}" placeholder="Search">
             </div>
           </form>
-        </div>
-      </nav>
-      <div class="container">
+        </nav>
         {% block content %}{% endblock %}
       </div>
     </div>
@@ -56,7 +54,7 @@
               <li><a href="{{url_for('base.page', path='contact')}}">Contact us</a></li>
             </ul>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-3 pull-right">
             <ul>
               <li><a href="https://github.com/CodeForAfrica/connectedAFRICA">Source code</a></li>
               <li>Powered by <a href="http://granoproject.org/">grano</a></li>
@@ -64,9 +62,10 @@
             </ul>
           </div>
         </div>
-      </div>
       <hr>
-      <div class="container">
+      <!--/div>
+      <hr>
+      <div class="container"-->
         <div class="row">
           <div class="col-md-6">
             <p>
