A lot of work on static pages.

--- a/connectedafrica/static/style/style.less
+++ b/connectedafrica/static/style/style.less
@@ -121,10 +121,6 @@ h1, h2, h3, h4 {
 
 // Footer style
 
-#pagewrapper {
-  padding-bottom: 2em;
-}
-
 footer {
   margin-bottom: -1em;
   color: @footer-foreground;
@@ -159,6 +155,10 @@ footer {
 // Modifications of bootstrap defaults
 
 ul.pagination { margin: 0; }
+
+li.active a {
+  color: white;
+}
 
 // Browser 
 
