--- a/connectedafrica/templates/browser.html
+++ b/connectedafrica/templates/browser.html
@@ -15,9 +15,12 @@
       </h3>
       <form class="form-search" role="form">
         <div class="form-group col-xs-12">
-          <input type="text" class="form-control main-search" name="q"
-            value="{{query}}"
-            placeholder="Search for people, companies and institutions...">
+          <div class="input-group">
+            <span class="input-group-addon"><i class="fa fa-search"></i></span>
+            <input type="text" class="form-control main-search" name="q"
+              value="{{query}}"
+              placeholder="Search for people, companies and institutions...">
+          </div>
         </div>
       </form>
     </div>
