--- a/connectedafrica/templates/index.html
+++ b/connectedafrica/templates/index.html
@@ -9,9 +9,8 @@
   <div class="jumbotron">
     <h1>{{APP_NAME}}</h1>
     <p>
-      We explore the links between politics, power and money through
-      systems of connectivity informing and influencing the political
-      economy.
+      We explore the links between politics, power and money in 
+      South Africa.
     </p>
   </div>
   <div class="row">
@@ -20,8 +19,8 @@
       <h3>What is {{APP_NAME}}?</h3>
       <p>
         Our database is a resource for anyone interested in how relationships -
-        biographical, professional or economic - influence the peopel and process
-        if South African politcs.
+        biographical, professional or economic - influence the people and process
+        in South African politics.
         <a href='{{url_for('base.page', path='about')}}'>Read more...</a>
       </p>
     </div>
