Google analytics and grayscale images.

--- a/connectedafrica/static/style/style.less
+++ b/connectedafrica/static/style/style.less
@@ -218,3 +218,12 @@ li.active a {
   }
 }
 
+.teaser-image {
+  margin-right: 1em;
+  width: 150px;
+
+  -webkit-filter: grayscale(100%);
+  -moz-filter: grayscale(100%);
+  filter: grayscale(100%);
+}
+
