rename start_date => date_start, end_date => date_end

--- a/connectedafrica/templates/profile_base.html
+++ b/connectedafrica/templates/profile_base.html
@@ -54,10 +54,10 @@
     <h2>Timeline</h2>
     {% block timeline %}
     <ul>
-    {% for group in relations.temporal|groupby('properties.start_date.value') %}
+    {% for group in relations.temporal|groupby('properties.date_start.value') %}
       <li class="text-center"><h3><span class="label label-info">{{ group.grouper }}</span></h3></li>
       {% for rel in group.list %}
-        <li class="person family"><a href="#">{{ rel.target.properties|display_name }}</a><ul><li><a href="#">{{ rel.properties.role.value }} ({{ rel.properties.start_date.value }} - {{ rel.properties.end_date.value }})</a></li></ul></li>
+        <li class="person family"><a href="#">{{ rel.target.properties|display_name }}</a><ul><li><a href="#">{{ rel.properties.role.value }} ({{ rel.properties.date_start.value }}{% if 'date_end' in rel.properties %} - {{ rel.properties.date_end.value }}){% endif %}</a></li></ul></li>
       {% endfor %}
     {% endfor %}
     </ul>
