improved relation section on profile

--- a/connectedafrica/templates/profile_base.html
+++ b/connectedafrica/templates/profile_base.html
@@ -51,13 +51,17 @@
 
   <div class="col-md-8">
     {% block centerpanel %}
-    <h2>Timeline</h2>
     {% block timeline %}
     <ul>
-    {% for group in relations.temporal|groupby('properties.date_start.value') %}
+    {% for group in relations.temporal|groupby('properties.date_start.value.year')|reverse %}
       <li class="text-center"><h3><span class="label label-info">{{ group.grouper }}</span></h3></li>
       {% for rel in group.list %}
-        <li class="person family"><a href="#">{{ rel.target.properties|display_name }}</a><ul><li><a href="#">{{ rel.properties.role.value }} ({{ rel.properties.date_start.value }}{% if 'date_end' in rel.properties %} - {{ rel.properties.date_end.value }}){% endif %}</a></li></ul></li>
+        <li class="person family">
+          <a href="{{ url_for('profile.view', id=rel.other.id, slug=rel.other.properties.name.value|slugify) }}">{{ rel.other.properties|display_name }}</a>
+          <ul>
+            <li>{{ rel.properties.role.value }} (from {{ rel.properties.date_start.value.strftime('%b %Y') }}{% if 'date_end' in rel.properties %} to {{ rel.properties.date_end.value.strftime('%b %Y') }}{% endif %})</li>
+          </ul>
+        </li>
       {% endfor %}
     {% endfor %}
     </ul>
