--- a/connectedafrica/static/style/style.less
+++ b/connectedafrica/static/style/style.less
@@ -227,3 +227,32 @@ li.active a {
   filter: grayscale(100%);
 }
 
+
+// Profiles
+
+.relation { 
+  margin-bottom: 16px;
+
+  a {
+    padding-bottom: 8px;
+    font-size: 16px;
+    font-weight: bold;
+  }
+  .details {
+    padding-left: 8px;
+    font-size: 14px;
+    color: rgb(51, 51, 51);
+  }
+}
+
+#bio img:first-child {
+  width: 100%;
+}
+
+#sources {
+  font-size: small;
+
+  ol {
+    padding-left: 15px;
+  }
+}
